--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
       <div>
         <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Pages</a>
-        <a href="#">Hobbies</a>
+        <a href="#about">About</a>
+        <a href="#service">Services</a>
+        <a href="#intern">Intern</a>
+        <a href="#hobby">Hobbies</a>
       </div>
       </div>
       <div class="right">
@@ -37,14 +37,14 @@
       <h1>I'm a Creative <span>Designer</span></h1>
       <p>Hello everyone welcome to my portfolio website.I am Abhishek Kumar persuing Btech degree at NIT Delhi.I am a ECE branch student and currently I am living in Delhi.</p>
 <div class="">
-  <button class="btn btn-secondary">DOWNLOAD CV</button>
+  <button class="btn btn-secondary" onclick="window.open('https://drive.google.com/file/d/1Giw8pyDcGTERS6mLFdffcm7QlGjZpsbL/view?usp=drivesdk')">DOWNLOAD CV</button>
 </div>
     </div>
 
   </div>
   </div>
 </header>
-<section class="about">
+<section id="about"class="about">
   <div class="container flex items-center">
     <div class="flex-1">
       <img class="about-me" src="./images/ab2.jpeg" alt="">
@@ -54,16 +54,16 @@
       <h3>Hello! I'm Abhishek Kumar.</h3>
       <p>Welcome to my Portfolio Website I am Abhishek persuing my bachelor degree (ECE branch) at NIT Delhi.</p>
       <div class="social">
-        <a href="#"><img src="./images/fb2.png" alt=""></a>
-        <a href="#"><img src="./images/twitter1.png" alt=""></a>
-        <a href="#"><img src="./images/insta1.png" alt=""></a>
+        <a href="https://www.facebook.com/"><img src="./images/fb2.png" alt=""></a>
+        <a href="https://twitter.com/Abhikumarab1"><img src="./images/twitter1.png" alt=""></a>
+        <a href="https://www.instagram.com/"><img src="./images/insta1.png" alt=""></a>
       </div>
     </div>
   </div>
 
 
 </section>
-<section class="services">
+<section id="service" class="services">
   <div class="container">
 
 
@@ -93,10 +93,10 @@
 <section class="freelancer">
   <h1>I Am Available For Freelancer</h1>
   <p>We provide high standard clean website for your business solutions</p>
-  <button class="btn btn-primary">DOWNLOAD CV</button>
+    <button class="btn btn-secondary" onclick="window.open('https://drive.google.com/file/d/1Giw8pyDcGTERS6mLFdffcm7QlGjZpsbL/view?usp=drivesdk')">DOWNLOAD CV</button>
 </section >
 
-<section class="work">
+<section id="intern" class="work">
   <div class="container">
     <h1 class="section-heading"><span>INTERN </span>Experience</h1>
     <div class="card-wrapper">
@@ -118,7 +118,7 @@
     </div>
   </div>
 </section>
-<section class="hobby">
+<section id="hobby" class="hobby">
   <div class="container">
     <h1 class="section-heading"><span>OUR </span>Hobbies</h1>
     <div class="card-wrapper">
@@ -160,5 +160,53 @@
     </div>
   </div>
 </section>
+<section class="contact">
+  <div class="container">
+    <h1 class="section-heading">Contact <span>Us</span></h1>
+    <div class="card-wrapper">
+      <div class="card">
+        <img src="./images/mob.jpg" alt="">
+        <h2>Call Us On</h2>
+        <h5>+917678334546</h5>
+      </div>
+      <div class="card">
+        <img src="./images/email.png" alt="">
+        <h2>Email Us At</h2>
+        <h5>abhishekkumarab44@gmail.com</h5>
+      </div>
+      <div class="card">
+        <img src="./images/wp.png" alt="">
+        <h2>Whatsapp Me</h2>
+        <h5>9540688017</h5>
+      </div>
+    </div>
+    <form action="">
+      <div class="input-wrap">
+        <input type="text" placeholder="Your Name *">
+          <input type="email" placeholder="Your Email *">
+      </div>
+      <div class="input-wrap-2">
+          <input type="text" placeholder="Your Subject...">
+        <textarea name="" rows="8" cols="80" placeholder="Your Message"></textarea>
+      </div>
+      <div class="btn-wrapper">
+        <button class="btn btn-primary">Send Message</button>
+      </div>
+    </form>
+  </div>
+</section>
+<footer>
+
+<div class="footer-social">
+  <a href="https://www.facebook.com/"><img src="./images/fb2.png" alt=""></a>
+  <a href="https://www.instagram.com/"><img src="./images/insta1.png" alt=""></a>
+  <a href="https://twitter.com/Abhikumarab1"><img src="./images/twitter1.png" alt=""></a>
+  <a href="https://web.whatsapp.com/"><img src="./images/wp.png" alt=""></a>
+  <a href="https://www.linkedin.com/feed/"><img src="./images/lk.png" alt=""></a>
+</div>
+<div class="Copyright">
+  Copyright 2022 @ All Right Reserved.
+</div>
+</footer>
   </body>
 </html>
